# rsc-experiments

./: .gitignore  README.md
deferred/: package-lock.json
deferred/src/: main.jsx
noserver/: package-lock.json  package.json
noserver-actions/: index.html
noserver-actions/public/: my-client-component.js
noserver-actions/src/: main.jsx
noserver-client-component/: README.md  index.html
noserver-pages/: README.md  index.html  package-lock.json  package.json  vite.config.js
noserver-streaming/: README.md  index.html  package-lock.json
rustserver/: Cargo.toml  README.md  package-lock.json  package.json
rustserver-rscx/: Cargo.toml  README.md  package-lock.json  package.json
rustserver-rscx/src/: flight.rs  jsx.rs  main.rs
rustserver-rscx/tests/: flight-test.rs  jsx-test.rs
withserver/: README.md  package-lock.json  server.js
withserver-actions/: README.md  package-lock.json  package.json  rsc-loader.js  server.js  vite.config.js
withserver-client-component/: README.md  package-lock.json  package.json  register-rsc-loader.js  rsc-loader.js  server.js
withserver-functions/: README.md  package-lock.json  server.js
withserver-pages/: README.md  package-lock.json  package.json  server.js  vite.config.js
withserver-ssr/: README.md  package-lock.json  package.json  server.js  vite.config.js
withserver-ssr-edge/: README.md  package-lock.json  package.json  rsc.js  server.js
withserver-ssr-worker/: README.md  app.js  package-lock.json  package.json  rsc.js  server.js
withserver-streaming/: README.md  package-lock.json  package.json  server.js
(+40 files in other folders)
